<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/file_save">
        <SwitchPreferenceCompat
                android:disableDependentsState="true"
                android:key="save_enable"
                android:title="@string/use_default_file" />

        <Preference
                android:dependency="save_enable"
                android:key="save_path"
                android:title="@string/rewrite_file_path" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced_setting">
        <SwitchPreferenceCompat
                android:key="hook_dump"
                android:summary="@string/hook_dump_desc"
                android:title="@string/hook_dump" />
        <SwitchPreferenceCompat
                android:key="fix_code_item"
                android:summary="@string/fix_code_item_desc"
                android:title="@string/fix_code_item" />
        <SwitchPreferenceCompat
                android:key="auto_call_method"
                android:summary="@string/auto_call_method_desc"
                android:title="@string/auto_call_method"/>
        <SwitchPreferenceCompat
                android:key="verify_dex"
                android:summary="@string/verify_dex_desc"
                android:title="@string/verify_dex"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/bit32_compat">
        <SwitchPreferenceCompat
                android:key="enable_32bit"
                android:summary="@string/bit32_compat_desc"
                android:title="@string/bit32_compat_title" />

        <Preference
                android:dependency="enable_32bit"
                android:key="install_helper"
                android:title="@string/install_helper" />

        <SwitchPreferenceCompat
                android:dependency="enable_32bit"
                android:key="dual_arch_dump"
                android:summary="@string/dual_arch_desc"
                android:title="@string/dual_arch_title" />
    </PreferenceCategory>


</PreferenceScreen>